# walter_bot

./: .gitignore  Dockerfile  bot.py  main.py  nohup.out  pyproject.toml  requirements.txt  run_bot.py
walter/: bot_instance.py  commands.py  config.py  db.py  postgresdb.py  read_sheet.py  sheet_functions.py
walter/cogs/: begin_tracking.py  events.py  exams.py  help.py  user.py  user_stats.py
walter/sql/: create_attempts_table.py  create_question_topics_table.py  create_topic_table.py  create_user_table.py  exam_topics.csv  fill_question_topics.py  fill_topics.py
walter/sql/labeled_questions/: fm_labelled.csv  p_labelled.csv  srm_labelled.csv
