[project]
name = "walter-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "asyncpg>=0.31.0",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cryptography==46.0.5",
    "discord==2.3.2",
    "discord-py==2.6.4",
    "frozenlist==1.8.0",
    "google-auth==2.48.0",
    "google-auth-oauthlib==1.2.4",
    "gspread==6.2.1",
    "idna==3.11",
    "multidict==6.7.1",
    "oauthlib==3.3.1",
    "propcache==0.4.1",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "sqlalchemy==2.0.46",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "yarl==1.22.0",
]
